--- a/books-api/src/containers/HeadingContainer/HeadingContainer.module.scss
+++ b/books-api/src/containers/HeadingContainer/HeadingContainer.module.scss
@@ -7,6 +7,19 @@
   padding-bottom: 20px;
   margin-bottom: 30px;
   width: 100vw;
-  height: 50vh;
+  height: 30vh;
+  gap: 40px;
+}
+
+.containerFull {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  padding-bottom: 20px;
+  margin-bottom: 30px;
+  width: 100vw;
+  height: 100vh;
   gap: 40px;
 }
