Added colors and styling and fixed some bugs, got autoscroll to work well

--- a/books-api/src/components/PageSelector/PageSelector.module.scss
+++ b/books-api/src/components/PageSelector/PageSelector.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  border: 2px solid black;
+  border: 2px solid #9c6644;
   border-radius: 15px;
   width: 600px;
   justify-content: space-between;
@@ -10,4 +10,6 @@
   margin-right: auto;
   padding-left: 10px;
   padding-right: 10px;
+  margin-bottom: 30px;
+  background-color: #ede0d4;
 }
