--- a/books-api/src/containers/HeadingContainer/HeadingContainer.module.scss
+++ b/books-api/src/containers/HeadingContainer/HeadingContainer.module.scss
@@ -3,12 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
+  border-bottom: 2px solid black;
   padding-bottom: 20px;
   margin-bottom: 30px;
   width: 100vw;
   height: 30vh;
   gap: 40px;
+  background-color: #7f5539;
 }
 
 .containerFull {
@@ -16,10 +17,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
-  padding-bottom: 20px;
-  margin-bottom: 30px;
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
   gap: 40px;
+  background-color: #e6ccb2;
+}
+
+.containerFull h1 {
+  color: #7f5539;
 }
