--- a/books-api/src/components/BookCard/BookCard.module.scss
+++ b/books-api/src/components/BookCard/BookCard.module.scss
@@ -1,13 +1,14 @@
 .card {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  border: 2px solid #9c6644;
   border-radius: 10px;
   align-items: center;
   justify-content: center;
   padding: 15px;
   width: 450px;
   height: 400px;
-  box-shadow: 10px 10px;
+  box-shadow: 10px 10px 10px rgba(128, 128, 128, 0.253);
   gap: 15px;
+  background-color: #ede0d4;
 }
