--- a/books-api/src/containers/BookModal/BookModal.module.scss
+++ b/books-api/src/containers/BookModal/BookModal.module.scss
@@ -1,10 +1,5 @@
 .modalcontainer {
   border-radius: 10px;
   margin: auto;
-  //   display: flex;
-
-  //   //   flex-direction: column;
-  //   align-items: center;
-  //   //   width: 60vw;
-  //   //   height: 30vh;
+  background-color: #ede0d4;
 }
