--- a/books-api/src/components/ModalCard/ModalCard.module.scss
+++ b/books-api/src/components/ModalCard/ModalCard.module.scss
@@ -15,6 +15,11 @@
   width: 200px;
 }
 
+.modalcard h4 {
+  font-size: 18px;
+  text-align: center;
+}
+
 .description {
   padding-bottom: 30px;
 }
