--- a/books-api/src/components/SearchBar/SearchBar.module.scss
+++ b/books-api/src/components/SearchBar/SearchBar.module.scss
@@ -16,4 +16,9 @@
   justify-content: center;
   align-items: center;
   font-size: 24px;
+  background-color: black;
+  // margin-left: 1px;
+  color: white;
+  border: none;
+  border-radius: 2px;
 }
