--- a/books-api/src/App.scss
+++ b/books-api/src/App.scss
@@ -18,4 +18,10 @@ body {
   & h4 {
     font-family: "Bree Serif", serif;
   }
+  width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
+  // border: 2px solid purple;
+  //   display: flex;
+  //   align-items: space-around;
 }
